--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "require": {
         "flarum/core": "^0.1.0-beta.6"
     },
+    "autoload": {
+        "psr-4": {
+            "Dng\\Flarum\\": "src/"
+        }
+    },
     "extra": {
         "flarum-extension": {
             "title": "Dng Login"
