--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "toro/flarum-ext-dng-login",
-    "description": "Dng Login",
+    "name": "toro/flarum-ext-dng",
+    "description": "Dng Flarum",
     "type": "flarum-extension",
     "require": {
         "flarum/core": "^0.1.0-beta.6"
@@ -12,7 +12,20 @@
     },
     "extra": {
         "flarum-extension": {
-            "title": "Dng Login"
+            "title": "เด็กฝึกงาน.com",
+            "settings": {
+                "login_url": "/d-login",
+                "logout_url": "/d-logout",
+                "links": {
+                    "primary": [
+                        {"id": "dng-home", "href": "https://เด็กฝึกงาน.com", "label": "เด็กฝึกงาน.com"}
+                    ],
+                    "secondary": [
+                        {"id": "dng-register", "href": "https://เด็กฝึกงาน.com/register", "label": "สมัครสมาชิก"},
+                        {"id": "dng-login", "href": "https://เด็กฝึกงาน.com/login", "label": "เข้าระบบ"}
+                    ]
+                }
+            }
         }
     }
 }
